--- a/layout02/style/style.css
+++ b/layout02/style/style.css
@@ -5,7 +5,24 @@
 
 header {
   margin: 0 auto;
-  width: 1200px;
-  height: 90px;
+  width: 1106px;
+  height: 100px;
   background: #2b3132;
+}
+
+header h1 {
+  background: lightcoral;
+  float: left;
+}
+
+header ul {
+  margin-right: ;
+}
+
+header ul li {
+  background: lightgreen;
+  float: right;
+  margin-left: 30px;
+  text-decoration: none;
+  display: inline-block;
 }
