--- a/layout02/style/style.css
+++ b/layout02/style/style.css
@@ -4,25 +4,36 @@
 }
 
 header {
+  position: fixed;
   margin: 0 auto;
-  width: 1106px;
+  width: 100%;
   height: 100px;
   background: #2b3132;
+  font-family: "Dosis", sans-serif;
+  z-index: 10;
 }
 
 header h1 {
-  background: lightcoral;
+  color: #fff;
   float: left;
+  margin: 25px 0 0 150px;
 }
 
 header ul {
-  margin-right: ;
+  float: right;
+  margin: 40px 150px 0 0;
+  font-weight: bold;
 }
 
 header ul li {
-  background: lightgreen;
-  float: right;
-  margin-left: 30px;
+  margin-left: 50px;
   text-decoration: none;
   display: inline-block;
+  color: #fff;
+}
+
+header a {
+  text-decoration: none;
+  color: #fff;
+  padding: 10px 10px;
 }
