--- a/layout02/style/style.css
+++ b/layout02/style/style.css
@@ -1,39 +1,75 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: "Dosis", sans-serif;
 }
 
-header {
+/*Header*/
+
+.header {
+  top: 0;
   position: fixed;
+  display: block;
   margin: 0 auto;
   width: 100%;
-  height: 100px;
-  background: #2b3132;
-  font-family: "Dosis", sans-serif;
+  height: 120px;
+  background: #fff;
   z-index: 10;
 }
 
-header h1 {
-  color: #fff;
+.header h1 {
+  font-size: 50px;
+  color: #000;
   float: left;
   margin: 25px 0 0 150px;
 }
 
-header ul {
+.header ul {
   float: right;
-  margin: 40px 150px 0 0;
+  margin: 50px 150px 0 0;
   font-weight: bold;
 }
 
-header ul li {
+.header ul li {
   margin-left: 50px;
+  font-size: 20px;
   text-decoration: none;
   display: inline-block;
+  letter-spacing: 0.1em;
+  color: #2b3132;
+}
+
+.header a {
+  text-decoration: none;
+  color: #2b3132;
+  padding: 10px 10px;
+}
+
+.header a:hover {
+  color: #202020a8;
+}
+
+/*Presentation*/
+
+.presentation_cont {
+  margin-top: 100px;
+  background-color: #2b3132;
+  width: 100%;
+  height: 600px;
+}
+
+.presentation {
+  padding-top: 150px;
+  text-align: center;
+}
+
+.presentation h1 {
+  font-size: 60px;
   color: #fff;
 }
 
-header a {
-  text-decoration: none;
+.presentation p {
+  font-size: 30px;
+  margin: 70px 380px;
   color: #fff;
-  padding: 10px 10px;
 }
