--- a/layout02/style/style.css
+++ b/layout02/style/style.css
@@ -36,7 +36,6 @@
   text-decoration: none;
   display: inline-block;
   letter-spacing: 0.1em;
-  color: #2b3132;
 }
 
 .header a {
@@ -103,4 +102,28 @@
   padding: 15px 45px;
   color: #fff;
   line-height: 50px;
+}
+
+/*Skills*/
+
+.skills h1 {
+  font-size: 50px;
+  color: #000;
+  float: left;
+  margin: 25px 0 0 150px;
+}
+
+.skills a {
+  float: right;
+  margin: 50px 150px 0 0;
+  font-size: 20px;
+  font-weight: bold;
+  color: #2b3132;
+  text-decoration: none;
+  display: inline-block;
+  letter-spacing: 0.1em;
+}
+
+.skills a:hover {
+  color: #202020a8;
 }
