--- a/layout02/style/style.css
+++ b/layout02/style/style.css
@@ -104,6 +104,10 @@
   line-height: 50px;
 }
 
+.call-to-action .btn2 a {
+  padding: 15px 62px;
+}
+
 /*Skills*/
 
 .skills h1 {
@@ -113,6 +117,16 @@
   margin: 25px 0 0 150px;
 }
 
+.skills {
+  background-color: #eae8e9;
+  padding-top: 30px;
+}
+
+.box-skills {
+  width: 100%;
+  height: 130px;
+}
+
 .skills a {
   float: right;
   margin: 50px 150px 0 0;
@@ -120,10 +134,38 @@
   font-weight: bold;
   color: #2b3132;
   text-decoration: none;
-  display: inline-block;
   letter-spacing: 0.1em;
 }
 
 .skills a:hover {
   color: #202020a8;
+}
+
+.container {
+  margin: 0 auto;
+  width: 1000px;
+  height: 400px;
+}
+
+.container .box01 {
+  float: left;
+  margin-right: 20px;
+  background: brown;
+  width: 320px;
+  height: 100%;
+}
+
+.container .box02 {
+  float: left;
+  margin-right: 20px;
+  background: brown;
+  width: 320px;
+  height: 100%;
+}
+
+.container .box03 {
+  float: left;
+  background: brown;
+  width: 320px;
+  height: 100%;
 }
