--- a/layout02/style/style.css
+++ b/layout02/style/style.css
@@ -128,6 +128,10 @@
   height: 130px;
 }
 
+.container .box-skills h2 {
+  color: #fff;
+}
+
 .skills a {
   float: right;
   margin: 50px 150px 0 0;
@@ -189,4 +193,12 @@
   height: 50%;
   margin-top: 60%;
   background-color: rgba(0, 0, 0, 0.219);
+  color: #fff;
+  text-align: left;
+}
+.box_shadow h2 {
+  padding: 20px 20px 0 20px;
+}
+.box_shadow p {
+  padding: 20px 20px 0 20px;
 }
