--- a/layout02/style/style.css
+++ b/layout02/style/style.css
@@ -123,6 +123,10 @@
   padding-bottom: 70px;
 }
 
+.skills a:hover {
+  color: #202020a8;
+}
+
 .box-skills {
   width: 100%;
   height: 130px;
@@ -140,10 +144,6 @@
   color: #2b3132;
   text-decoration: none;
   letter-spacing: 0.1em;
-}
-
-.skills a:hover {
-  color: #202020a8;
 }
 
 .container {
@@ -167,6 +167,13 @@
   background: brown;
   width: 332px;
   height: 100%;
+}
+
+.container h3 i {
+  position: absolute;
+  margin: 60px 128px;
+  font-size: 80px;
+  color: #fff;
 }
 
 .container .typography {
