--- a/layout02/style/style.css
+++ b/layout02/style/style.css
@@ -3,6 +3,11 @@
   padding: 0;
   font-family: "Dosis", sans-serif;
 }
+img {
+  display: block;
+  width: 100%;
+  margin-bottom: -184px;
+}
 
 /*Header*/
 
@@ -128,7 +133,7 @@
   margin: 50px 150px 0 0;
   font-size: 20px;
   font-weight: bold;
-  color: #2b3132;
+  color: #000;
   text-decoration: none;
   letter-spacing: 0.1em;
 }
@@ -204,10 +209,19 @@
   text-align: left;
 }
 .box_shadow h2 {
+  font-weight: normal;
+  font-size: 22px;
   padding: 20px 20px 0 20px;
 }
 .box_shadow p {
   padding: 20px 20px 0 20px;
+}
+.box_shadow h2 a {
+  color: #000;
+  float: left;
+  font-size: 22px;
+  margin-top: 0.5px;
+  margin-bottom: 20px;
 }
 
 /*Recent Works*/
@@ -225,11 +239,6 @@
   margin: 25px 0 0 150px;
 }
 
-.box-work {
-  width: 100%;
-  height: 130px;
-}
-
 .recent-work a {
   float: right;
   margin: 50px 150px 0 0;
@@ -241,5 +250,28 @@
 }
 
 .recent-work a:hover {
+  color: #000;
+}
+.container .work3 {
+  background: #fff;
+}
+.work02 {
+  background: #fff;
+}
+
+.container .work01 {
+  background: #fff;
+}
+
+.box-work {
+  width: 100%;
+  height: 130px;
+}
+
+.box03 .work03 {
+  background: #fff;
+}
+
+.work p {
   color: #000;
 }
