--- a/layout02/style/style.css
+++ b/layout02/style/style.css
@@ -353,3 +353,31 @@ img {
   color: #2b3132;
   margin: 60px 60px 0px 118px;
 }
+
+/*About*/
+
+.me {
+  background: #2b3132;
+  width: 100%;
+  height: 200px;
+}
+
+.about img {
+  width: 120px;
+  float: left;
+  margin-left: 365px;
+  margin-top: 70px;
+}
+
+.about-me {
+  color: #fff;
+  float: left;
+  margin-left: 28px;
+  margin-top: 65px;
+  font-weight: normal;
+}
+
+.about-me h2 {
+  padding-bottom: 30px;
+}
+}
