--- a/layout02/style/style.css
+++ b/layout02/style/style.css
@@ -359,7 +359,7 @@ img {
 .me {
   background: #2b3132;
   width: 100%;
-  height: 200px;
+  height: 400px;
 }
 
 .about img {
@@ -380,4 +380,12 @@ img {
 .about-me h2 {
   padding-bottom: 30px;
 }
+
+/*Stalk me*/
+
+.stalk-me {
+  float: left;
+  width: 100%;
+  margin: 25px 0 20px 513px;
+  color: #fff;
 }
