--- a/layout02/style/style.css
+++ b/layout02/style/style.css
@@ -359,7 +359,7 @@ img {
 .me {
   background: #2b3132;
   width: 100%;
-  height: 400px;
+  height: 600px;
 }
 
 .about img {
@@ -388,4 +388,42 @@ img {
   width: 100%;
   margin: 25px 0 20px 513px;
   color: #fff;
+}
+
+.stalk-me ul li {
+  display: inline-block;
+  font-size: 20px;
+  margin-top: 15px;
+  margin-right: 15px;
+  margin-bottom: 80px;
+}
+
+.stalk-me ul li a {
+  text-decoration: none;
+  color: #fff;
+  padding: 10px 0;
+}
+.btn {
+  clear: both;
+  text-align: center;
+  font-size: 40px;
+}
+
+.btn a {
+  text-decoration: none;
+  background-color: #fff;
+  color: #2b3132;
+  border: 3px solid #fff;
+  border-radius: 5px;
+  padding: 20px 140px;
+}
+
+.btn a:hover {
+  color: #fff;
+  background-color: #2b3132;
+}
+
+footer {
+  float: left;
+  font-size: 15px;
 }
